# tis

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt
app/simple_dll_tester/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/api/include/: til.hpp
src/api/include/til/: til.hpp
src/api/src/: til.cpp
src/api/tests/: test_simple_api.cpp
src/core/: CMakeLists.txt
src/core/include/: onnx_reader.hpp
src/core/src/: onnx_reader.cpp
